--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1640,7 +1640,7 @@ v2-logout:
     world: mainmenu
   fc3bf70e-2dda-441d-9c19-8d682a2b0183:
     group: superherocities
-    world: hallofjustice
+    world: survival112
   b7342943-d209-4e29-bf49-880bb39afdc8:
     group: superherocities
     world: starlabs
