--- a/ChatControl/messages.yml
+++ b/ChatControl/messages.yml
@@ -150,7 +150,7 @@ Broadcaster:
 &cPlease read &a/listglitches &cfirst to prevent reporting something already reported!\n
 &b----------------------------------------------------"
     - "&b ----------------------------------------------------\n
-&cDiscord: &ahttps://discord.gg/86CDDh4\n
+&cDiscord: &ahttps://discord.gg/rnKWKkn\n
 &b----------------------------------------------------"
     - "&b ----------------------------------------------------\n
 &7Handy Stuff:\n
