--- a/CommandHelper/reportglitch.yml
+++ b/CommandHelper/reportglitch.yml
@@ -6,4 +6,6 @@ storage:
       cant use \/thru - RoryDaPanda","no ones on - Karma0001","Websling ddoesn''t
       work very well, if you swing down it killls the invisible chicken and doesn''t
       work, and also the arrow can hit yourself and others. - Robotics5","As Danny
-      Phantom \/thru wont work - Bruce_Wayne08"]'}
+      Phantom \/thru wont work - Bruce_Wayne08","when I get hit I dont take damage
+      and it puts in chat \"PlayerOfflineException: The Specified player (f94eee4c-4b1f-4cc6-8722-6e03930b512)
+      is not online - Atelophia"]'}
