--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -3414,3 +3414,6 @@ v2-logout:
   2842515a-02c8-420e-a67d-3eb8c89dbefe:
     group: superherocities
     world: pokemon
+  e9277ca1-b2dc-43e3-a1bc-a38467bad62d:
+    group: superherocities
+    world: survival112
